tests/snapshots/cli__follow_current_directory@centerpiece.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -4,7 +4,9 @@
   inputs = {
     nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
     home-manager.url = "github:nix-community/home-manager";
+    home-manager.inputs.nixpkgs.follows = "nixpkgs";
     treefmt-nix.url = "github:numtide/treefmt-nix";
+    treefmt-nix.inputs.nixpkgs.follows = "nixpkgs";
     crane.url = "github:ipetkov/crane";
   };


----- stderr -----
warning: stale-lock follows at line 6, column 24: home-manager.nixpkgs -> nixpkgs (flake.lock resolves to <none>; run `nix flake lock`)
