tests/snapshots/cli__follow_empty_indirect_lockfile.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/lock_indirect_empty.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/lock_indirect_empty.flake.lock"
    - "--diff"
    - follow
    - "--depth"
    - "2"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All inputs are already deduplicated.

----- stderr -----
