tests/snapshots/cli__follow_no_inputs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/follow_no_inputs.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/first_nested_node.flake.lock"
    - "--no-lock"
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Nothing to deduplicate.

----- stderr -----
