tests/snapshots/cli__follow_nulled_stale_depth3.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/nulled_stale_depth3.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/nulled_stale_depth3.flake.lock"
    - "--diff"
    - follow
    - "--transitive"
    - "--depth"
    - "6"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -4,7 +4,6 @@
     omnibus.url = "github:Lehmanator/nix-configs";
     omnibus.inputs.nixpkgs.follows = "nixpkgs";
     # `omnibus.flops.gone` is absent from the lockfile.
-    omnibus.inputs.flops.inputs.gone.follows = "";
   };

   outputs =

----- stderr -----
